fixed some minor issues with lesson plan spacing

--- a/src/views/LessonPlanDetailPage/Section/style.scss
+++ b/src/views/LessonPlanDetailPage/Section/style.scss
@@ -60,14 +60,22 @@
     }
 
     @media (max-width: map-get($grid-breakpoints, "sm")) {
+
+      #firstGridItem {
+        //border-top: 1px solid $charcoal;
+        //margin-bottom: 1rem;
+        padding-top: 1rem;
+        //width: 100%;
+      }
       .statContainer {
         border-bottom: 1px solid $charcoal;
-        margin-bottom: 1.5rem;
-        padding-bottom: 1.5rem;
+        margin-bottom: 1rem;
+        padding-bottom: 1rem;
         width: 100%;
       }
       #lastGridItem {
         border-bottom: none;
+        padding-bottom: 0;
       }
     }
     @media (max-width: map-get($grid-breakpoints, "md")) {
